--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
                 </div>
                 <div class="col-12 col-md-6">
-                    <img src="https://images.pexels.com/photos/3981627/pexels-photo-3981627.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="an example picture from pexels">
+                    <img class="img-fluid" src="https://images.pexels.com/photos/3981627/pexels-photo-3981627.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="an example picture from pexels">
                 </div>
             </div>
         </div>
