--- a/index.html
+++ b/index.html
@@ -8,9 +8,11 @@
     <body>
         <div class="container">
             <div class="row">
-                <div class="col-12">
-                    <h1>Welcome to my site!</h1>
-                </div>
+                <header>
+                    <div class="col-12">
+                        <h1>Welcome to my site!</h1>
+                    </div>
+                </header>
             </div>
             <div class="row">
                 <div class="col-12 col-md-6">
@@ -21,6 +23,30 @@
                 <div class="col-12 col-md-6">
                     <img class="img-fluid" src="https://images.pexels.com/photos/3981627/pexels-photo-3981627.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="an example picture from pexels">
                 </div>
+            </div>
+            <div>
+                <h3>Curriculum Vitae</h3>
+                <h5>Professional Experience</h5>
+                <table>
+                    <tr>
+                        <th>From</th>
+                        <th>To</th>
+                        <th>Position</th>
+                        <th>Place</th>
+                    </tr>
+                    <tr>
+                        <td>2020/12</td>
+                        <td>Now</td>
+                        <td>Student Support in the area of web projects</td>
+                        <td>IWI - Institut für Wirtschaftsinformatik</td>
+                    </tr>
+                    <tr>
+                        <td>2017/03</td>
+                        <td>2019/04</td>
+                        <td>Internship Banking for High School Graduates</td>
+                        <td>UBS Switzerland AG</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </body>
