--- a/index.html
+++ b/index.html
@@ -28,29 +28,33 @@
                 <div class="col-12">
                     <h3>Curriculum Vitae</h3>
                     <h5>Professional Experience</h5>
-                    <table>
-                        <tr>
-                            <th>From</th>
-                            <th>To</th>
-                            <th>Position</th>
-                            <th>Place</th>
-                        </tr>
-                        <tr>
-                            <td>2020/12</td>
-                            <td>Now</td>
-                            <td>Student Support in the area of web projects</td>
-                            <td>IWI - Institut für Wirtschaftsinformatik</td>
-                        </tr>
-                        <tr>
-                            <td>2017/03</td>
-                            <td>2019/04</td>
-                            <td>Internship Banking for High School Graduates</td>
-                            <td>UBS Switzerland AG</td>
-                        </tr>
+                    <table class="table">
+                        <thead>
+                            <tr>
+                                <th>From</th>
+                                <th>To</th>
+                                <th>Position</th>
+                                <th>Place</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td>2020/12</td>
+                                <td>Now</td>
+                                <td>Student Support in the area of web projects</td>
+                                <td>IWI - Institut für Wirtschaftsinformatik</td>
+                            </tr>
+                            <tr>
+                                <td>2017/03</td>
+                                <td>2019/04</td>
+                                <td>Internship Banking for High School Graduates</td>
+                                <td>UBS Switzerland AG</td>
+                            </tr>
+                        </tbody>
                     </table>
                 </div>   
             </div>
-            <div class="row">
+            <div class="row mt-5">
                 <footer>
                     <p>this is the end of the page</p>
                 </footer>
