--- a/index.html
+++ b/index.html
@@ -1,64 +1,36 @@
 <!DOCTYPE html>
-<html lang="de-ch" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>My Site!</title>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    </head>
-    <body>
-        <div class="container">
-            <div class="row">
-                <header>
-                    <div class="col-12">
-                        <h1>Welcome to my site!</h1>
-                    </div>
-                </header>
-            </div>
-            <div class="row">
-                <div class="col-12 col-md-6">
-                    <h5>Title 1</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-
-                </div>
-                <div class="col-12 col-md-6">
-                    <img class="img-fluid" src="https://images.pexels.com/photos/3981627/pexels-photo-3981627.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" alt="an example picture from pexels">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-12">
-                    <h3>Curriculum Vitae</h3>
-                    <h5>Professional Experience</h5>
-                    <table class="table">
-                        <thead>
-                            <tr>
-                                <th>From</th>
-                                <th>To</th>
-                                <th>Position</th>
-                                <th>Place</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <td>2020/12</td>
-                                <td>Now</td>
-                                <td>Student Support in the area of web projects</td>
-                                <td>IWI - Institut für Wirtschaftsinformatik</td>
-                            </tr>
-                            <tr>
-                                <td>2017/03</td>
-                                <td>2019/04</td>
-                                <td>Internship Banking for High School Graduates</td>
-                                <td>UBS Switzerland AG</td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </div>   
-            </div>
-            <div class="row mt-5">
-                <footer>
-                    <p>this is the end of the page</p>
-                </footer>
-            </div>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.min.css" integrity="sha512-RVmrWua3k1yTDEOg4Yzs2bK5+Thh7nM6jrhDq/6/5/Mwa0JbYe4pP4YMK5sqghKz01T3DgrwYc57Jaf1PSurCg==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">    
+</head>
+<body>
+    <div id="fullpage">
+        <div class="section">
+            <h1>Some section</h1>
         </div>
-    </body>
+        <div class="section">
+            <h1>Some section</h1>
+        </div>
+        <div class="section">
+            <h1>Some section</h1>
+        </div>
+    </div>
+
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.min.js" integrity="sha512-HqbDsHIJoZ36Csd7NMupWFxC7e7aX2qm213sX+hirN+yEx/eUNlZrTWPs1dUQDEW4fMVkerv1PfMohR1WdFFJQ==" crossorigin="anonymous"></script>
+    <script>
+        new fullpage('#fullpage', {
+            //options here
+            autoScrolling:true,
+            scrollHorizontally: true
+        });
+    </script>
+</body>
 </html>
