--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Welcome to my site!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.min.css" integrity="sha512-RVmrWua3k1yTDEOg4Yzs2bK5+Thh7nM6jrhDq/6/5/Mwa0JbYe4pP4YMK5sqghKz01T3DgrwYc57Jaf1PSurCg==" crossorigin="anonymous" />
     <link rel="stylesheet" href="css/main.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
@@ -13,13 +15,31 @@
 <body>
     <div id="fullpage">
         <div class="section">
-            <h1>Some section</h1>
+            <h1>Welcome to my Page!</h1>
         </div>
         <div class="section">
-            <h1>Some section</h1>
+            <h1>Silvan Stöckli</h1>
         </div>
-        <div class="section">
-            <h1>Some section</h1>
+        <div class="section d-flex align-items-center justify-content-center">
+            <div class="slide">
+                <h1>Contact</h1>
+            </div>
+            <div class="slide">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>you can find me:</h3>
+                        </div>
+                        <div class="col-12 d-flex align-items-right">
+                            <i class="fa fa-linkedin"></i>
+                            <p>Linkedin</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="slide">
+                <h3>More soon...</h3>
+            </div>
         </div>
     </div>
 
@@ -28,9 +48,16 @@
     <script>
         new fullpage('#fullpage', {
             //options here
-            autoScrolling:true,
-            scrollHorizontally: true
+            anchors: ['firstPage', 'secondPage', '3rdPage'],
+            navigation: true,
+            navigationTooltips: ['Home', 'About', 'Contact'],
+            controlArrows: false,
+            slidesNavigation: true,
         });
     </script>
 </body>
 </html>
+
+autoScrolling:true,
+scrollHorizontally: true,
+slidesNavigation: true,
