--- a/index.html
+++ b/index.html
@@ -38,7 +38,18 @@
                 </div>
             </div>
             <div class="slide">
-                <h3>More soon...</h3>
+                
+                <div class="container">
+                    <div class="row">
+                        <div class="col-12">
+                            <h3>More soon...</h3>
+                        </div>
+                        <div class="col-12 d-flex align-items-right">
+                            <a href="https://wp-dev.unisg.dev/publications/ueberleben-neben-amazon-business-und-co-der-weg-zum-eigenen-b2b-online-marktplatz/">click here</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
