--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <h3>More soon...</h3>
                         </div>
                         <div class="col-12 d-flex align-items-right">
-                            <a href="https://wp-dev.unisg.dev/publications/ueberleben-neben-amazon-business-und-co-der-weg-zum-eigenen-b2b-online-marktplatz/">click here</a>
+                            <a href="https://wp-dev.unisg.dev/publications/ueberleben-neben-amazon-business-und-co-der-weg-zum-eigenen-b2b-online-marktplatz/" target="_blank">click here</a>
                         </div>
                     </div>
                 </div>
