--- a/index.html
+++ b/index.html
@@ -1,74 +1,60 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welcome to my site!</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.min.css" integrity="sha512-RVmrWua3k1yTDEOg4Yzs2bK5+Thh7nM6jrhDq/6/5/Mwa0JbYe4pP4YMK5sqghKz01T3DgrwYc57Jaf1PSurCg==" crossorigin="anonymous" />
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat" rel="stylesheet">    
-</head>
-<body>
-    <div id="fullpage">
-        <div class="section">
-            <h1>Welcome to my Page!</h1>
-        </div>
-        <div class="section">
-            <h1>Silvan Stöckli</h1>
-        </div>
-        <div class="section d-flex align-items-center justify-content-center">
-            <div class="slide">
-                <h1>Contact</h1>
-            </div>
-            <div class="slide">
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            <h3>you can find me:</h3>
-                        </div>
-                        <div class="col-12 d-flex align-items-right">
-                            <i class="fa fa-linkedin"></i>
-                            <p>Linkedin</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="slide">
-                
-                <div class="container">
-                    <div class="row">
-                        <div class="col-12">
-                            <h3>More soon...</h3>
-                        </div>
-                        <div class="col-12 d-flex align-items-right">
-                            <a href="https://wp-dev.unisg.dev/publications/ueberleben-neben-amazon-business-und-co-der-weg-zum-eigenen-b2b-online-marktplatz/" target="_blank">click here</a>
-                        </div>
-                    </div>
-                </div>
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Silvan Stoeckli | Personal Page</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+  </head>
+  <body>
+    <header id="header" class="pt-5">
+        <div class="container text-white text-center text-lg-end mt-5 p-3">
 
+            <div class="img m-auto me-lg-0">
+                <div class="shadow" style="background-image: url(assets/img/avatar2.jpg);"></div>
+            </div>
+
+            <h1 class="display-4">
+                Hello World!
+            </h1>
+            <h4 class="lead">
+                I'm Silvan and this is my very cool personal page.
+            </h4>
+
+        </div>
+    </header>
+    <div id="main">
+        <div class="container-lg d-block d-lg-flex align-items-center">
+            <div class="row">
+                <h4 class="display-6">
+                    About me
+                </h4>
+                <p>
+                    Some facts.
+                </p>
             </div>
         </div>
     </div>
-
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.1.0/fullpage.min.js" integrity="sha512-HqbDsHIJoZ36Csd7NMupWFxC7e7aX2qm213sX+hirN+yEx/eUNlZrTWPs1dUQDEW4fMVkerv1PfMohR1WdFFJQ==" crossorigin="anonymous"></script>
-    <script>
-        new fullpage('#fullpage', {
-            //options here
-            anchors: ['firstPage', 'secondPage', '3rdPage'],
-            navigation: true,
-            navigationTooltips: ['Home', 'About', 'Contact'],
-            controlArrows: false,
-            slidesNavigation: true,
-        });
-    </script>
-</body>
+    <footer id="footer d-none-lg">
+        <div class="container-lg">
+            <div class="d-flex w-100 justify-content-center justify-content-lg-end">
+                <a href="https://linkedin.com/in/silvan-stoeckli">
+                    <i class="fa-brands fa-linkedin-in"></i>
+                </a>
+                <a href="https://github.com/silvnst">
+                    <i class="fa-brands fa-github"></i>
+                </a>
+                <a href="mailto:silvan.stoeckli@student.unisg.ch">
+                    <i class="fa-solid fa-envelope"></i>
+                </a>
+            </div>
+        </div>
+    </footer>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
-
-autoScrolling:true,
-scrollHorizontally: true,
-slidesNavigation: true,
