--- a/index.html
+++ b/index.html
@@ -27,19 +27,37 @@
     </header>
     <div id="main">
         <div class="container-lg d-block d-lg-flex align-items-center">
-            <div class="row">
-                <h4 class="display-6">
-                    About me
-                </h4>
-                <p>
-                    Some facts.
-                </p>
+            <div class="section row pt-3">
+                <div class="col-12">
+                    <h4 class="display-6">
+                        About me
+                    </h4>
+                    <p>
+                        Some facts.
+                    </p>
+                </div>
+                <div class="col-12">
+                    <h4 class="display-6">
+                        Projects
+                    </h4>
+                    <p>
+                        Some projects.
+                    </p>
+                </div>
+                <div class="col-12">
+                    <h4 class="display-6">
+                        Contact
+                    </h4>
+                    <p>
+                        Some form.
+                    </p>
+                </div>
             </div>
         </div>
     </div>
-    <footer id="footer d-none-lg">
-        <div class="container-lg">
-            <div class="d-flex w-100 justify-content-center justify-content-lg-end">
+    <footer id="footer">
+        <div class="container-lg py-5 py-lg-0">
+            <div class="d-flex w-100 justify-content-center justify-content-lg-end text-white">
                 <a href="https://linkedin.com/in/silvan-stoeckli">
                     <i class="fa-brands fa-linkedin-in"></i>
                 </a>
