--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Silvan Stoeckli | Personal Page</title>
+    <!-- Favicons -->
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/img/favicon/fav-16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/img/favicon/fav-32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="assets/img/favicon/fav-96.png">
+    
+    <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+    
+    <!-- Custom (CSS)-->
     <link rel="stylesheet" href="assets/css/main.css">
   </head>
   <body>
